--- a/nidrsh.html
+++ b/nidrsh.html
@@ -6,7 +6,7 @@
 		<title>[प्र॒क॒र॒ण॒ना॒म]</title>
 	</head>
 	<body>
-		<h2><a href="index.html">स्व॒र॒प्र॒बो॒धः</a></h2>
+		<h2><a href="index.html">स्व॒र॒न्या॒याः</a></h2>
 		[त॒त्त्वम्]
 	</body>
 </html>
